# opengl-simulation

./: CMakeLists.txt  README.md  build.sh  flake.nix
include/glad/: glad.h
src/: Camera.cpp  Camera.hpp  MathUtils.h  Particle.hpp  ParticleManager.cpp  ParticleManager.hpp  Vertex.hpp  main.cpp
src/shaders/: sphereFS.glsl  sphereVS.glsl
